syntax = "proto3";

package user;

service UserService {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

message RegisterRequest {
    string username = 1;
    string password = 2;
    string email = 3;
}

message RegisterResponse {
    string userId = 1;
    string message = 2; // например, сообщение о успешной регистрации
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1; // JWT токен
    string message = 2; // сообщение о результате аутентификации
}

message GetUserRequest {
    string userId = 1;
}

message GetUserResponse {
    string userId = 1;
    string username = 2;
    string email = 3;
}